cambios de estructura

--- a/templates/persona_nueva.html
+++ b/templates/persona_nueva.html
@@ -22,17 +22,22 @@
           <input type="text" name="nombre" id="nombre" v-model="nombre">
         </div>
         <div class="mb-3">
-          <label for="precio">Precio</label>
-          <input type="number" name="precio" id="precio" v-model="precio">
+          <label for="apellido">Apellido</label>
+          <input type="text" name="apellido" id="apellido" v-model="apellido">
         </div>
         <div class="mb-3">
-          <label for="stock">Stock</label>
-          <input type="number" name="stock" id="stock" v-model="stock">
+          <label for="edad">Edad</label>
+          <input type="number" name="edad" id="edad" v-model="edad">
         </div>
         <div class="mb-3">
-          <label for="imagen">Imagen</label>
-          <input type="text" name="imagen" id="imagen" v-model="imagen">
-          <img width="100" :src="imagen" alt="">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email" v-model="email">
+          <img width="100" :src="email" alt="">
+        </div>
+        <div class="mb-3">
+          <label for="foto">Foto</label>
+          <input type="text" name="foto" id="foto" v-model="foto">
+          <img width="100" :src="foto" alt="">
          
         </div>
        
@@ -55,6 +60,6 @@
     </script>
   <script src="../js/main.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="../js/productos.js"></script>
+  <script src="../js/personas.js"></script>
 </body>
 </html>
