--- a/templates/persona_nueva.html
+++ b/templates/persona_nueva.html
@@ -1,22 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Producto Nuevo</title>
+  <title>Alumno Nuevo</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="shortcut icon" href="iconos/Teacher_Outline.ico" type="image/x-icon">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
-  <header id="header">
-    <!-- place navbar here -->
-  </header>
+<body class = "grid-container">
+<header class="header">
+  <h1>Clases Online</h1>
+  <br>
+  <h2>Gestión de Alumnos</h2>
+</header>
+    
+<div class="navbar-container">
+    <nav class="navbar">
+        <li><a href="./personas.html">Listado de alumnos</a></li>
+        <li><a href="./persona_nueva.html">Agregar alumno</a></li>
+        <li><a href="./persona_update.html">Modificar alumno</a></li>
+    </nav>
+</div>
   <main>
     <div class="container" id="app">
       <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
-        <h1>Alta de Producto</h1>
+        <h1>Alta de Alumno</h1>
+        <br>
         <div class="mb-3">
           <label for="nombre">Nombre</label>
           <input type="text" name="nombre" id="nombre" v-model="nombre">
@@ -49,9 +63,14 @@
 
 
   </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
+  <footer class="footer">
+    <a href="https://www.facebook.com" target="_blank"><i class='bx bxl-facebook-square bx-lg'></i></i></a>
+    <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram bx-lg' style='color:#c18d2c'></i></a>
+    <a href="https://wa.me/5491150459292?text=%C2%A1Hola!%20Quiero%20saber%20m%C3%A1s%20sobre%20las%20clases%20online" target="_blank"><i class='bx bxl-whatsapp bx-lg' style='color:#16d41b'></i></a>
+    <a href="https://www.discord.com" target="_blank"><i class='bx bxl-discord-alt bx-lg' style='color:#161dd4'></i></a>
+    <br><br>
+    Todos los derechos reservados
+</footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
