--- a/templates/persona_update.html
+++ b/templates/persona_update.html
@@ -22,7 +22,7 @@ integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+f
         <nav class="navbar">
             <li><a href="./personas.html">Listado de alumnos</a></li>
             <li><a href="./persona_nueva.html">Agregar alumno</a></li>
-            <li><a href="./persona_update.html">Modificar alumno</a></li>
+            <li><a href="../infoAlumnos.html">Información de Alumnos</a></li>
         </nav>
     </div>
 <main>
