--- a/templates/persona_nueva.html
+++ b/templates/persona_nueva.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <li><a href="./personas.html">Listado de alumnos</a></li>
         <li><a href="./persona_nueva.html">Agregar alumno</a></li>
-        <li><a href="./persona_update.html">Modificar alumno</a></li>
+        <li><a href="../infoAlumnos.html">Información de alumnos</a></li>
     </nav>
 </div>
   <main>
