--- a/templates/personas.html
+++ b/templates/personas.html
@@ -22,12 +22,12 @@ crossorigin="anonymous">
         <nav class="navbar">
             <li><a href="./personas.html">Listado de alumnos</a></li>
             <li><a href="./persona_nueva.html">Agregar alumno</a></li>
-            <li><a href="./persona_update.html">Modificar alumno</a></li>
+            <li><a href="../infoAlumnos.html">Información de Alumnos</a></li>
         </nav>
     </div>
 <main>
 <div id="app" class="container">
-<h1>Personas</h1>
+<h1>Alumnos</h1>
 <br>
 <a class="btn btn-primary" href="./persona_nueva.html">Nuevo</a>
 <br><br>
